k3d/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi-deployment
  labels:
    app: fastapi-app
spec:
  selector:
    matchLabels:
      app: fastapi-app
  replicas: 3
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: fastapi-app
    spec:
      containers:
      - name: fastapi-app
        image: k3d-registry.localhost:12345/fastapi-app:latest
        ports:
        - containerPort: 8000
